--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,19 +1,88 @@
+* {
+	padding: 0px;
+	margin: 0px;
+}
+
 body {
-	background-image: url("../images/guitarmic1.jpg");
-	background-size: 100%;
-	background-repeat: no-repeat;
+	background: #222222;
 	color: #fff;
 	font-family: helvetica, sans-serif;
 	text-align: center;
-	margin: 0;
+	line-height: 1.2;
 }
 
+nav {
+	padding: 20px 0px;
+	background-color: rgba(2,2,2,.4);
+	color: #ffffff;
+	text-decoration: none;
+	text-align: center;
+
+}
+
+header {
+	background-image: url("../images/guitarmic1.jpg");
+	background-size: 100%;
+}
+
+
 h1 {
-	margin-top: 225px;
+	padding-top: 180px;
 	font-size: 6.2em;
 	font-weight: 400;
 	text-transform: uppercase;
 }
+
+section h2 {
+	margin-bottom: 40px;
+}
+
+ul {
+	list-style-type: none;
+}
+
+hr {
+	width: 50%;
+	text-align: center;
+}
+
+nav a {
+	text-decoration: none;
+	color: #ffffff;
+}
+
+nav a:hover {
+	text-decoration: none;
+	color: #dddddd;
+}
+
+nav img {
+	height: 40px;
+	margin-top: -10px;
+}
+
+
+
+#phone {
+	float: left;
+	padding-left: 20px;
+}
+
+#social {
+	float: right;
+	margin-right: 20px;
+}
+
+.mainnav {
+	margin: 0 20px;
+}
+
+
+
+.button p {
+	margin-top: 10px;
+}
+
 #slogan {
 	font-style: italic;
 	font-size: 1.2em;
@@ -24,37 +93,28 @@ h1 {
 .button {
 	display: inline-block;
 	margin-top: 150px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0, auto;
 	height: 40px;
 	width: 200px;
 	background-color: #e64633;
 	color: #fff;
 	font-size: .9em;
 	font-weight: 200;
-	
+	margin-bottom: 120px;
+
 }
 
-ul {
-	list-style-type: none;
-}
 
-hr {
-	width: 50%;
-}
-
-.blackdiv {
-	background-color: #000;
-	background-size: 100% 100%;
-	margin-top: 2em;
+.blacksection {
+	background-color: #222222;
+	background-size: 100%, 100%;
 	padding-bottom: 10em;
 }
 
-.whitediv {
+.whitesection {
 	background-color: #fff;
-	color: #000;
+	color: #222222;
 	background-size: 100% 100%;
-	margin-top: 4em;
 	padding-bottom: 10em;
 }
 
