--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,6 +1,7 @@
 * {
 	padding: 0px;
 	margin: 0px;
+	box-sizing:border-box;
 }
 
 body {
@@ -11,21 +12,47 @@ body {
 	line-height: 1.2;
 }
 
-nav {
+header {
 	padding: 20px 0px;
-	background-color: rgba(2,2,2,.4);
+	background-color: rgba(34,34,34,.4);
 	color: #ffffff;
+	position:absolute;
 	text-decoration: none;
 	text-align: center;
+	top:0;
+	width:100%;
 
 }
+header a {
+	text-decoration: none;
+	color: #ffffff;
+}
 
-header {
+header a:hover {
+	text-decoration: none;
+	color: #dddddd;
+}
+header div {
+	float:right;
+}
+header img {  /* remind john to talk about icon fonts */
+	height: 40px;
+	margin-top: -10px;
+}
+section {
+	padding:10em 0;
+}
+section#splash {
 	background-image: url("../images/guitarmic1.jpg");
-	background-size: 100%;
+	background-size: cover;
+	background-repeat:no-repeat;
+	height:50vh;
+	padding:0;
 }
-
-
+section:nth-of-type(odd) {
+	background-color: #fff;
+	color: #222;
+}
 h1 {
 	padding-top: 180px;
 	font-size: 6.2em;
@@ -45,24 +72,6 @@ hr {
 	width: 50%;
 	text-align: center;
 }
-
-nav a {
-	text-decoration: none;
-	color: #ffffff;
-}
-
-nav a:hover {
-	text-decoration: none;
-	color: #dddddd;
-}
-
-nav img {
-	height: 40px;
-	margin-top: -10px;
-}
-
-
-
 #phone {
 	float: left;
 	padding-left: 20px;
@@ -77,12 +86,6 @@ nav img {
 	margin: 0 20px;
 }
 
-
-
-.button p {
-	margin-top: 10px;
-}
-
 #slogan {
 	font-style: italic;
 	font-size: 1.2em;
@@ -90,36 +93,17 @@ nav img {
 	letter-spacing: .2em;
 }
 
-.button {
+.button, #splash a {
 	display: inline-block;
-	margin-top: 150px;
-	margin: 0, auto;
-	height: 40px;
 	width: 200px;
 	background-color: #e64633;
 	color: #fff;
 	font-size: .9em;
 	font-weight: 200;
-	margin-bottom: 120px;
-
-}
-
-
-.blacksection {
-	background-color: #222222;
-	background-size: 100%, 100%;
-	padding-bottom: 10em;
-}
-
-.whitesection {
-	background-color: #fff;
-	color: #222222;
-	background-size: 100% 100%;
-	padding-bottom: 10em;
+	padding:2em 0;
 }
 
 .divcontent {
-	padding-top: 8em;
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
