--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -46,7 +46,8 @@ section#splash {
 	background-image: url("../images/guitarmic1.jpg");
 	background-size: cover;
 	background-repeat:no-repeat;
-	height:50vh;
+	color:#fff;
+	height:75vh;
 	padding:0;
 }
 section:nth-of-type(odd) {
@@ -101,6 +102,7 @@ hr {
 	font-size: .9em;
 	font-weight: 200;
 	padding:2em 0;
+	text-decoration:none;
 }
 
 .divcontent {
