--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -68,7 +68,7 @@ section#splash {
 	background-size: cover;
 	background-repeat:no-repeat;
 	color:#fff;
-	height: 100vh;
+	height: 110vh;
 	padding:0;
 }
 section:nth-of-type(odd) {
@@ -87,13 +87,26 @@ h1 {
 	text-transform: uppercase;
 }
 
+h3 {
+	margin: 1.5em 0em;
+}
+
 section h2 {
 	font-size: 1.5em;
 	margin-bottom: 2em;
 }
 
+
+
 a {
-	transition: .25s;
+	transition: .25s;color;
+	text-decoration: none;
+	color: #fff;
+}
+
+a:hover {
+	text-decoration: none;
+	color: #dddddd;
 }
 
 p {
@@ -102,12 +115,13 @@ p {
 	width: 30em;
 	text-align: center;
 	margin: 0em auto;
-	/*ASK JOHN why does taking out skew the text to the left. should it not inherit from .divcontent*/
-	
+	text-align: left;
+		
 }
 
 ul {
 	list-style-type: none;
+	line-height: 1.4em;
 }
 
 hr {
@@ -115,6 +129,11 @@ hr {
 	text-align: center;
 	color: #fff;
 }
+
+iframe, object, embed {
+        max-width: 80%;
+}
+
 #phone {
 	float: right;
 	padding-left: 1em;
@@ -131,12 +150,12 @@ hr {
 .slogan {
 	font-style: italic;
 	font-weight: 200;
-	width: 47em;
+	width: 48em;
 	padding: 1.5em 0em 5em 0em;
 	margin: 0em auto;
+	text-align: center;
 
 }
-
 
 .button, #splash a {
 	display: inline-block;
@@ -154,12 +173,63 @@ hr {
     background-color: #F62048;
 }
 
-.divcontent {
+.twocolumn {
+	display: inline;
 	margin: 0em auto;
+	width: 50%;
+	float: left;
 }
 
+.blacksection:after {
+	content: "."; 
+   	visibility: hidden; 
+   	display: block; 
+   	height: 0; 
+   	clear: both;
+}
 
-	
+.whitesection:after {
+	content: "."; 
+   	visibility: hidden; 
+   	display: block; 
+   	height: 0; 
+   	clear: both;
+}
+
+.clientimg {
+	width: 25%;
+	float: left;
+	display: inline;
+	margin: auto;
+}
+
+#services a {
+	font-variant: small-caps;
+}
+
+#services iframe {
+	margin-top: 20px;
+}
+
+#engineers img {
+	width: 180px;
+	border-radius: 90px;
+}
+
+#clients img {
+	width: 15em;
+	height: 10em;
+	display: block;
+}
+
+#googlemap {
+	background-color: gray;
+	width: 33.33%;
+	height: 350px;
+	float: left;
+	margin-left: 5em;
+}
+
 
 
 
