--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -8,6 +8,15 @@
 	box-sizing:border-box;
 }
 
+video {
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
 body {
 	background: #222222;
 	color: #fff;
@@ -65,14 +74,15 @@ section {
 	padding:10em 0;
 }
 section#splash {
-	background-image: url("../images/micsplash.jpg");
-	background-size: cover;
+	/*background-image: url("../images/micsplash.jpg");*/
+	/*background-size: cover;
 	background-repeat:no-repeat;
+	background-position: center;*/
 	color:#fff;
-	height: 120vh;
+/*	height: 100vh;*/
 	padding:0;
 }
-section:nth-of-type(odd) {
+section:nth-of-type(even) {
 	background-color: #fff;
 	color: #222;
 	width: 100%
@@ -83,8 +93,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 {
-	padding-top: 2.5em;
-	font-size: 6.5em;
+	padding-top: 1.5em;
+	font-size: 7.5em;
 	font-weight: 400;
 	text-transform: uppercase;
 
@@ -115,7 +125,6 @@ a:hover {
 p {
 	font-size: 1em;
 	line-height: 1.5em;
-	text-align: center;
 	margin: 0em auto;
 	text-align: left;
 		
@@ -149,8 +158,7 @@ iframe, object, embed {
 	font-style: italic;
 	font-weight: 200;
 	width: 47.5em;
-	padding: 1.5em 0em 8em 0em;
-	margin: 0em auto;
+	margin: 1.5em auto 8em auto;
 	text-align: center;
 
 }
@@ -159,11 +167,12 @@ iframe, object, embed {
 	display: inline-block;
 	width: 15em;
 	background-color: #fa4542;
-	box-shadow: 0 3px 0 0 #be0201;
+	box-shadow: 1.5em #000;
 	color: #fff;
 	font-size: .9em;
 	font-weight: 200;
 	padding:1.5em 0;
+	margin-bottom: 3em;
 	text-decoration:none;
 }
 
@@ -208,19 +217,14 @@ iframe, object, embed {
 	margin-top: 20px;
 }
 
-#equipment img {
-	width: 15em;
-}
-
 .gallery {
 	clear: both;
 }
 
-.gallery li {
+.gallery img {
+	padding: .5em;
+	width: 33.3%;
 	float: left;
-	padding: 1em;
-	margin: 0 auto;
-	list-style: none;
 }
 
 #engineers img {
@@ -233,7 +237,7 @@ iframe, object, embed {
 }
 
 #clients img {
-	width: 15em;
+	width: 100%;
 	display: block;
 }
 
@@ -242,6 +246,7 @@ iframe, object, embed {
 	padding: 1em;
 	margin: 0 auto;
 	list-style: none;
+	width: 33.3%;
 }
 
 #googlemapdiv {
@@ -261,19 +266,20 @@ iframe, object, embed {
 }
 
 .contacticon {
-	font-size: 5em;
+	font-size: 4em;
 }
 
 
-footer {
-	clear: both;
+footer p {
 	text-align: center;
 	font-size: .8em;
 	font-weight: 100;
+	padding: 1em;
 }
 
 footer hr {
 	width: 50%;
+	margin: auto;
 }
 
 
