--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -91,6 +91,7 @@ h1,h2,h3,h4,h5,h6 {
 
 h1 {
 	padding-top: 2em;
+	margin-bottom: .5em;
 	font-size: 7.5em;
 	font-weight: 400;
 	text-transform: uppercase;
@@ -172,7 +173,7 @@ footer hr {
 	font-style: italic;
 	font-weight: 200;
 	width: 47.5em;
-	margin: 1.5em auto 8em auto;
+	margin: 1.5em auto 7em auto;
 	text-align: center;
 
 }
@@ -231,6 +232,12 @@ footer hr {
 #redbg {
 	background-color: #fa4542;
 	color: #fff;
+	width: 50%;
+	float: right;
+}
+
+#redbg li {
+	padding: 0 1em;
 }
 
 
@@ -305,118 +312,6 @@ a.back-to-top {
 
 a.back-to-top:hover {
     background-color: #F62048;
-
-}
-
-
-@media screen and (max-width: 768px) {
-	div#splash {
-		background-image: url("../images/micsplash.jpg");
-		background-size: cover;
-		background-repeat:no-repeat;
-		background-position: center;
-		color:#fff;
-		height: 100vh;
-		padding:0;
-}
-	h1, h2 {
-		padding-top: 2em;
-	}
-
-	iframe#jbjvideo {
-		margin-top: 8em;
-	}
-
-
-	nav, video, header div {
-		display: none;
-	}
-
-	.slogan {
-		width: 95%;
-
-	}
-	section {
-		padding: 0;
-	}
-
-	.gallery img {
-		padding: .5em;
-		width: 50%;
-		float: left;
-}
-
-
-	p {
-		margin: 0;
-	}
-
-	#googlemapdiv {
-		display: none;
-	}
-
-	#nav-toggle {
-		display: inline;
-		font-size: 3em;
-		float: right;
-}
-}
-
-	
-
-@media screen and (max-width: 600px) {
-	
-	section {
-		padding-bottom: 2em;
-	}
-
-	h1{
-		font-size: 3em;
-		margin: 0em 0 2em 0;
-		padding-top: 5em;
-	}
-
-	section h2 {
-		padding: 1em;
-		margin-bottom: 0em;
-	}
-
-	iframe#jbjvideo {
-		margin: 2em 0 2em 0;
-	}
-
-	.twocolumn {
-		max-width: 100%;
-		float: none;
-		padding: 0 1.5em;
-}
-	p {
-		text-align: center;
-
-	}
-
-
-	.gallery img {
-		padding: .5em;
-		width: 100%;
-		float: none;
-}
-
-	#splash a {
-		display: none;
-}
-
-	#engineers img {
-		margin-top: 2em;
-	}
-
-
-
-	#clients li {
-	padding: .5em;
-	width: 50%;
-}
-
 
 }
 
