--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -283,15 +283,22 @@ a.back-to-top:hover {
 	padding-left: 10em;
 }
 
+section#equipment {
+	padding: 0;
+}
+
 #equipment .twocolumn {
-	padding: 4em 1.5em;
+	padding: 4em 1.5em ;
 }
 
 #redbg {
 	background-color: #fa4542;
 	color: #fff;
-	/*padding: 4em;*/
 	margin: 0 auto;
+}
+
+div#redbg {
+	box-shadow: 2px rgba(0,0,0,.25) 2px rgba(0,0,0,.15);
 }
 
 #redbg li {
