--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -576,6 +576,18 @@ section#contact {
 	h1 {
 		font-size: 6em;
 	}
+
+	input, textarea {
+		width: 80%;
+	}
+
+	#contact .twocolum {
+		padding-bottom: 0;
+	}
+
+	#contactdetails {
+		font-size: .9em;
+	}
 }
 
 @media screen and (max-width: 504px) {
