--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -588,6 +588,14 @@ section#contact {
 	#contactdetails {
 		font-size: .9em;
 	}
+
+	.contacticon {
+		height: 3.5em;
+	}
+
+	footer {
+		font-size: .8em;
+	}
 }
 
 @media screen and (max-width: 504px) {
