--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -455,6 +455,10 @@ section#contact {
 		padding: 0;
 	}
 
+	#contacttel {
+		padding: 1em;
+	}
+
 	#address {
 		margin-bottom: 0;
 	}
@@ -590,7 +594,7 @@ section#contact {
 	}
 
 	.contacticon {
-		height: 3.5em;
+		height: 3em;
 	}
 
 	footer {
