--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -494,6 +494,7 @@ section#contact {
         moz-background-size: cover;
         o-background-size: cover;
     	height: 100vh;
+    	-webkit-transform: translateZ(0);
     }
     #bgvid {
         display: none;
