--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -589,6 +589,7 @@ section#contact {
 	input, textarea, form, #submit {
 		width: 80%;
 		border-radius: 0;
+		-webkit-appearance: none;
 	}
 
 	#contact .twocolum {
