--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -76,7 +76,7 @@ nav {
 
 section {
 	background-color: #222; 
-	padding:10em 0;
+	padding: 3em 0;
 }
 
 section:nth-of-type(even) {
@@ -103,9 +103,14 @@ h3 {
 	margin: 1.5em 0em;
 }
 
+h4 {
+	padding-bottom: .25em;
+}
+
+
+
 section h2 {
 	font-size: 1.5em;
-	margin-bottom: 2em;
 }
 
 
@@ -127,7 +132,7 @@ a:hover {
 p {
 	font-size: 1em;
 	line-height: 1.5em;
-	margin: 0em auto;
+	margin: 2em auto;
 	text-align: left;
 		
 }
@@ -135,6 +140,7 @@ p {
 ul {
 	list-style-type: none;
 	line-height: 1.4em;
+	margin: 2em auto;
 }
 
 
@@ -168,6 +174,7 @@ textarea:focus {
 
 footer {
 	background-color: #222; 
+	padding-bottom: 2em;
 }
 
 footer p {
@@ -208,7 +215,7 @@ a.back-to-top:hover {
 .socialsvg {
 	fill: #fff;
 	height: 1.2em;
-	width: auto;
+	width: 1.2em;
 	-webkit-transition: .25s;color;
 	-moz-transition: .25s;color;
 	-o-transition: .25s;color;
@@ -263,6 +270,13 @@ a.back-to-top:hover {
 	padding: 1.5em;
 }
 
+.threecolumn {
+	width: 33.33%;
+	float: left;
+	padding: 1.5em;
+	text-align: justify;
+}
+
 .clearfix:after {
 	content: "."; 
    	visibility: hidden; 
@@ -291,7 +305,7 @@ a.back-to-top:hover {
 
 .contacticon {
 	height: 4em;
-	width: auto;
+	width: 4em;
 	fill: #fff;
 	-webkit-transition: .25s;color;
 	-moz-transition: .25s;color;
@@ -371,6 +385,10 @@ section#equipment {
 	border-radius: 90px;
 }
 
+#clients h2 {
+    margin-bottom: 0;
+}
+
 #clients div {
 	text-align: center;
 }
@@ -388,6 +406,9 @@ section#equipment {
 	width: 33.3%;
 }
 
+#canvas1 {
+	margin-top: 8em;
+}
 
 #googlemap {
 	width: 100%;
@@ -397,17 +418,11 @@ section#equipment {
 	display: none;
 }
 
-#contactdetails {
-	text-align: center;
-	padding-bottom: 6em;
-}
-
-#contacttel {
-	padding: 1em;
-	}
-
-section#contact {
-	padding-bottom: 2em;
+#address {
+	text-align: justify;
+	width: 15em;
+	margin: 1em auto;
+	padding-left: 4em;
 }
 
 #contact input:focus {
@@ -415,10 +430,6 @@ section#contact {
   	outline-style: none;
 }
 
-
-#address {
-	margin-bottom: 1em;
-}
 
 #submit {
 	display: inline-block;
@@ -465,7 +476,7 @@ section#contact {
 		margin-bottom: 0;
 	}
 	.contacticon {
-		margin-bottom: 3em;
+		margin: 2em 0 1em 0;
 	}	
 }
 
@@ -488,13 +499,14 @@ section#contact {
 
 @media screen and (max-device-width: 800px) {
     #splash {
-        background: linear-gradient(rgba(34, 34, 34, .6), rgba(34, 34, 34, .6)), url(../images/mobilebg.png) no-repeat fixed center ;
+        background: url(../images/mobilebg.png);
         background-size: cover;
-        webkit-background-size: cover;
-        moz-background-size: cover;
-        o-background-size: cover;
-    	height: 100vh;
-}
+        background-repeat: no-repeat;
+    	background-position: center; 
+    	height: auto;
+    	padding: 10em 0;
+    	}
+
     #bgvid {
         display: none;
     }
@@ -541,12 +553,12 @@ section#contact {
 		margin-bottom: 2em;
 	}
 
-	#engineers h2 {
-		margin-bottom: 1em;
-	}
-
 	#googlemap {
 		display: none;
+	}
+
+	#canvas1 {
+		margin-top: 0;
 	}
 
 	#directions {
@@ -575,10 +587,6 @@ section#contact {
 		font-size: .8em;
 	}
 
-	section h2 {
-		margin-bottom: 1em;
-
-	}
 }
 
 @media screen and (max-width: 540px) {
@@ -587,8 +595,9 @@ section#contact {
 	}
 
 	input, textarea, form, #submit {
-		width: 80%;
+		width: 100%;
 		border-radius: 0;
+		margin: .5em auto;
 		-webkit-appearance: none;
 	}
 
@@ -600,14 +609,8 @@ section#contact {
 		font-size: .9em;
 	}
 
-	.contacticon {	
-		height: 2em;
-	
-	}
 
-	footer {
-		font-size: .6em;
-	}
+
 }
 
 @media screen and (max-width: 504px) {
@@ -650,6 +653,12 @@ section#contact {
 		font-size: .7em;
 	}
 
+}
+
+@media screen and (max-height: 650px) {
+	#splash {
+		padding: 3em 0;
+	}
 }
 
 @media screen and (max-width: 365px) {
