--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -174,7 +174,7 @@ textarea:focus {
 
 footer {
 	background-color: #222; 
-	padding-bottom: 2em;
+	padding-bottom: .5em;
 }
 
 footer p {
@@ -643,7 +643,6 @@ section#equipment {
 @media screen and (max-width: 450px) {
 	h1 {
 		font-size: 5em;
-		padding-top: 2em;
 	}
 }
 
