--- a/girlsandboys/css/stylebasic.css
+++ b/girlsandboys/css/stylebasic.css
@@ -1,5 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Yantramanav);
 
+@font-face {
+  font-family: 'clear-light';
+  src: url('fonts/clearsans/EOT/ClearSans-Light.eot');
+  src: url('fonts/clearsans/EOT/ClearSans-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+   url('fonts/clearsans/WOFF/ClearSans-Light.woff') format('woff'), /* Modern Browsers */
+   url('fonts/clearsans/TTF/ClearSans-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+   url('fonts/clearsans/SVG/ClearSans-Light.svg#clear-med') format('svg');/* IE9 Compat Modes */
+  /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'clear-regular';
+  src: url('fonts/clearsans/EOT/ClearSans-Regular.eot');
+  src: url('fonts/clearsans/EOT/ClearSans-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+   url('fonts/clearsans/WOFF/ClearSans-Regular.woff') format('woff'), /* Modern Browsers */
+   url('fonts/clearsans/TTF/ClearSans-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+   url('fonts/clearsans/SVG/ClearSans-Regular.svg#clear-med') format('svg');/* IE9 Compat Modes */
+  /* Legacy iOS */
+}
+
 body {
 	background: #000;
 	font-size: 16px;
@@ -28,8 +48,8 @@ a {
 
 footer h2 {
 	color: #fff;
-	font-family: Yantramanav, sans-serif;
-	font-size: .8em;
+	font-family: clear-regular, sans-serif;
+	font-size: .84em;
 	padding: .3em;
 }
 
@@ -49,41 +69,39 @@ input:focus {
 }
 
 ::-webkit-input-placeholder {
-   font-family: Yantramanav, sans-serif;
+   font-family: ;, sans-serif;
    color: rgba(255, 255, 255, .5);
    font-size: .8em;
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   font-family: Yantramanav, sans-serif;
+   font-family: clear-regular;, sans-serif;
    color:  rgba(255, 255, 255, .5); 
    font-size: .8em;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   font-family: Yantramanav, sans-serif;
+   font-family: clear-regular;, sans-serif;
    color:  rgba(255, 255, 255, .5);
    font-size: .8em; 
 }
 
 :-ms-input-placeholder {  
-   font-family: Yantramanav, sans-serif;
+   font-family: clear-regular;, sans-serif;
    color: rgba(255, 255, 255, .5);  
    font-size: .8em;
 }
 
 .mainnav {
 	color: #fff;
-	font-size: 1.2em;
-	font-style: none;
-	font-family: Yantramanav, sans-serif;
-	font-weight: 200;
-	letter-spacing: .1em;
+	font-size: 1.1em;
+	font-weight: 100;
+	font-family: clear-light, sans-serif;
 	text-rendering: optimizeLegibility;
 	text-decoration: none;
 	margin: .5em 1em 0 1.5em;
-	white-space: nowrap;
 }
+
 
 .clearfix:after {
    content: " ";
@@ -127,6 +145,7 @@ input:focus {
 	background: white;
 }
 
+
 #stillbg { 
     position: fixed;
     top: 50%;
@@ -148,7 +167,7 @@ input:focus {
 	background: transparent;
 	border: none;
 	border-bottom: 2px solid rgba(255, 255, 255, 1);
-	font-family: Yantramanav, sans-serif;
+	font-family: clear-regular;, sans-serif;
 	font-size: .8em;
 	padding: 2px;
 }
@@ -157,7 +176,7 @@ input:focus {
 	background: none;
 	border: none;
 	color: #fff;
-	font-family: Yantramanav, sans-serif;
+	font-family: clear-regular;, sans-serif;
 	font-size: .8em;
 	padding-bottom: .15em;
 }
