full sit update

--- a/mirrors2016full/css/style.css
+++ b/mirrors2016full/css/style.css
@@ -76,7 +76,7 @@ footer img {
 	width: auto;
 }
 
-h1, h2 {
+h1, h2, h3 {
 	font-family: "Century Gothic", Muli, Helvetica, Arial, sans-serif;
 	color: #fff;
 	font-size: 2em;
@@ -86,6 +86,10 @@ h1, h2 {
 }
 
 h2 {
+	font-size: 1em;
+}
+
+h3 {
 	font-size: 1em;
 }
 
@@ -188,16 +192,41 @@ svg {
 	transition: .5s;
 	margin: 6em auto 0;
 	text-align: center;
+	transition: .5s;
 }
 
 .tickets svg:hover {
 	fill: #4fb75a;
+	transition: .5s;
 }
 
-.about {
-	width: 60em;
+.lineup, .about {
+	width: 30em;
 	margin: 8em auto;
+}
 
+.lineup h1 {
+	margin-bottom: 2.5em;
+}
+
+.lineup h3 {
+	margin: 1em 0;
+}
+
+.about span {
+	font-weight: 800;
+	color: #4fb75a;
+}
+
+.about a {
+	text-decoration: underline;
+	color: #fff;
+	transition: .5s;
+}
+
+.about a:hover {
+	color: #4fb75a;
+	transition: .5s;
 }
 
 .poster {
@@ -221,6 +250,10 @@ svg {
 	width: 100%;
 	height: auto;
 	-webkit-height: auto;
+}
+
+#manymore {
+	margin-top: 5em;
 }
 
 #hamburger {
@@ -437,6 +470,17 @@ svg {
 
 	.poster {
 		width: 20em;
+	}
+
+	.lineup, .about {
+	width: 25em;
+
+	}
+}
+
+@media screen and (max-width: 470px) {
+	.lineup, .about {
+	width: 20em;
 	}
 }
 
